# PaverManager

./: .gitignore  README.md  index.html  manifest.json  service-worker.js
css/: styles.css
js/: app.js  fallback.js  icons.js  suppliers.js  sync.js
sprat/sprat-pwa/: _patch_fallback_target.js  _patch_prod_fields.js  _patch_summary.js  index.html  service-worker.js  sprattasks.md
sprat/sprat-pwa/css/: styles.css
sprat/sprat-pwa/js/: app.js  fallback.js  icons.js  po.js  suppliers.js
sprat/sprat-pwa/sheets/: Code.gs
sprat/sprat-pwa/wasm/pkg/: .gitignore  package.json  sprat_pwa_bg.wasm.d.ts
sprat/sprat-pwa/wasm/src/: lib.rs
wasm/: Cargo.toml
wasm/pkg/: sprat_pwa.d.ts  sprat_pwa.js  sprat_pwa_bg.wasm
